<resources>
    <string name="app_name">Dishcover</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="username">Username</string>

    <string name="sign_up">Sign Up</string>
    <string name="empty_fields">You must fill in all the fields.</string>
    <string name="wrong_format">One of the fields is incorrectly typed.</string>

    <string name="login">Login</string>
    <string name="login_upper">LOGIN</string>
    <string name="login_failed">Login failed. Please ensure the fields are correct.</string>
    <string name="login_task_failed">Login failed. Authentication servers might be down.</string>
    <string name="login_account_disabled">Your account has been disabled.</string>
    <string name="too_many_attempts">Too many %s attempts. Please try again later</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_no_account">Don\'t have an account?</string>

    <string name="register">Register</string>
    <string name="register_upper">REGISTER</string>
    <string name="register_have_account">Already have an account?</string>
    <string name="register_failed">Failed to register in the system.</string>
    <string name="register_user_conflict">An account with one of the credentials already exists.</string>
    <string name="register_password_mismatch">Passwords do not match. Please make sure both passwords are identical.</string>

</resources>